tests/NormalTests/paczka1/fuzzy1/96486189.err
Error in line 8: DzyYgZ A557 238,39
Error in line 4: DzyYgZ A557 80,7
Error in line 16: ilS5UTi A557 -1,51
Error in line 23: A47 A47 44,3
Error in line 15: ilS5UTi A557 90,0
Error in line 26: A47 A557 34,4
Error in line 25: 7wDR80Q A557 48,5
